update readme and few other files
